--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  #   - family: AkiraExpanded
+  #     fonts:
+  #       - asset: assets\fonts\AkiraExpanded.otf
+  # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
