--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^5.1.0
   provider: ^6.0.5
   animated_text_kit: ^4.2.2
+  url_launcher: ^6.1.12
 
 dev_dependencies:
   flutter_test:
