--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
