get the spotify data with its model

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   url_launcher: ^6.1.12
   font_awesome_flutter: ^10.5.0
   http: ^1.1.0
+  webview_flutter: ^4.2.3
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
     - assets/images/fixed.png
     - assets/images/fixed_lite.png
     - assets/images/profile.jpg
+    - assets/json/dummy_spotify_data.json
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
