--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_dotenv: ^5.1.0
   json_to_form: ^0.0.5
   file_picker: ^5.5.0
+  marquee: ^2.2.3
+  shared_preferences: ^2.2.1
 
 dependency_overrides:
   http: ^0.13.3
