--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/fixed.png
     - assets/images/fixed_lite.png
     - assets/images/profile.jpg
+    - assets/images/textures/grainy_texture.jpg
     - assets/json/dummy_spotify_data.json
     - assets/json/dummy_spotify_data_multiple.json
   #   - images/a_dot_burr.jpeg
