--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,25 @@ dependencies:
   file_picker: ^5.5.0
   marquee: ^2.2.3
   shared_preferences: ^2.2.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/icon/logoV.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/images/icon/logoV.png"
+    background_color: "#68a058"
+    theme_color: "#68a058"
+  windows:
+    generate: true
+    image_path: "assets/images/icon/logoV.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon/logoV.png"
 
 dependency_overrides:
   http: ^0.13.3
@@ -81,6 +100,7 @@ flutter:
     - assets/images/textures/grainy_texture1.jpg
     - assets/images/textures/grainy_texture2.jpg
     - assets/images/textures/grainy_texture3.jpg
+    - assets/images/icon/logoV.png
     - assets/json/dummy_spotify_data.json
     - assets/json/dummy_spotify_data_multiple.json
   #   - images/a_dot_burr.jpeg
