change bg overlay with gif. refactor overall code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   marquee: ^2.2.3
   shared_preferences: ^2.2.1
   flutter_launcher_icons: ^0.13.1
+  flutter_sequence_animation: ^4.0.0
 
 flutter_launcher_icons:
   android: true
@@ -93,13 +94,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/fixed.png
-    - assets/images/fixed_lite.png
     - assets/images/profile.jpg
-    - assets/images/textures/grainy_texture0.jpg
-    - assets/images/textures/grainy_texture1.jpg
-    - assets/images/textures/grainy_texture2.jpg
-    - assets/images/textures/grainy_texture3.jpg
+    - assets/images/textures/tv_noise.gif
     - assets/images/icon/logoV.png
     - assets/json/dummy_spotify_data.json
     - assets/json/dummy_spotify_data_multiple.json
